--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^1.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.7",
-    "vitest": "^0.10.2"
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@types/react-router-dom": "5.3.3",
+    "@vitejs/plugin-react": "1.3.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-router-dom": "6.3.0",
+    "typescript": "4.6.4",
+    "vite": "2.9.7",
+    "vitest": "0.10.2"
+  },
+  "dependencies": {
+    "bulma": "0.9.4",
+    "countries-list": "2.6.1"
   }
 }
